--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Uploads (We use Cloudinary now)
+# Uploads
 backend/uploads/*
 !backend/uploads/.gitkeep
 
